<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Smart Home"
            app:titleTextColor="#ffffff" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp">
                <LinearLayout
                    android:elevation="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingBottom="16dp"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="vertical">

                    <ru.nikartm.support.ImageBadgeView
                        android:id="@+id/ibv_icon2"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="center_vertical"
                        android:padding="10dp"
                        android:src="@drawable/ic_kitchen"
                        app:ibv_badgeColor="#FF5722"
                        app:ibv_badgeLimitValue="false"
                        app:ibv_badgeTextColor="#ffffff"
                        app:ibv_badgeTextSize="12sp"
                        app:ibv_badgeTextStyle="bold"
                        app:ibv_badgeValue="0"
                        app:ibv_fixedBadgeRadius="15dp"
                        app:ibv_visibleBadge="false"
                        app:layout_constraintEnd_toStartOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/kitchen"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="8dp"
                        android:layout_weight="1"
                        app:cardElevation="2dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:layout_height="200dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:orientation="horizontal">

                            <ru.nikartm.support.ImageBadgeView
                                android:id="@+id/room"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_alignParentStart="true"
                                android:layout_gravity="center_vertical"
                                android:padding="10dp"
                                android:src="@drawable/ic_local_hotel_black_24dp"
                                app:ibv_badgeColor="#FF5722"
                                app:ibv_badgeLimitValue="false"
                                app:ibv_badgeTextColor="#ffffff"
                                app:ibv_badgeTextSize="12sp"
                                app:ibv_badgeTextStyle="bold"
                                app:ibv_badgeValue="0"
                                app:ibv_fixedBadgeRadius="15dp"
                                app:ibv_visibleBadge="false"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/roomtxt"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/roomtxt"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="@string/room"
                                android:textColor="#000000"
                                android:textSize="18sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/room"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray"/>
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:orientation="horizontal">

                            <ru.nikartm.support.ImageBadgeView
                                android:id="@+id/room2"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_alignParentStart="true"
                                android:layout_gravity="center_vertical"
                                android:padding="10dp"
                                android:src="@drawable/ic_local_hotel_black_24dp"
                                app:ibv_badgeColor="#FF5722"
                                app:ibv_badgeLimitValue="false"
                                app:ibv_badgeTextColor="#ffffff"
                                app:ibv_badgeTextSize="12sp"
                                app:ibv_badgeTextStyle="bold"
                                app:ibv_badgeValue="0"
                                app:ibv_fixedBadgeRadius="15dp"
                                app:ibv_visibleBadge="false"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/roomtxt2"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/roomtxt2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="@string/room2"
                                android:textColor="#000000"
                                android:textSize="18sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/room2"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray"/>
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:background="?attr/selectableItemBackground"
                            android:orientation="horizontal">

                            <ru.nikartm.support.ImageBadgeView
                                android:id="@+id/garansi"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_alignParentStart="true"
                                android:layout_gravity="center_vertical"
                                android:padding="10dp"
                                android:src="@drawable/ic_directions_car_black_24dp"
                                app:ibv_badgeColor="#FF5722"
                                app:ibv_badgeLimitValue="false"
                                app:ibv_badgeTextColor="#ffffff"
                                app:ibv_badgeTextSize="12sp"
                                app:ibv_badgeTextStyle="bold"
                                app:ibv_badgeValue="0"
                                app:ibv_fixedBadgeRadius="15dp"
                                app:ibv_visibleBadge="false"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/garansitxt"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/garansitxt"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="@string/garanso"
                                android:textColor="#000000"
                                android:textSize="18sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/garansi"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="8dp"
                        android:layout_weight="1"
                        app:cardElevation="2dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="400dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:background="?attr/selectableItemBackground"
                            android:orientation="vertical">

                            <ru.nikartm.support.ImageBadgeView
                                android:id="@+id/livingroom"
                                android:layout_width="match_parent"
                                android:layout_height="80dp"
                                android:layout_gravity="center_vertical"
                                android:padding="10dp"
                                android:src="@drawable/ic_airplay_black_24dp"
                                app:ibv_badgeColor="#FF5722"
                                app:ibv_badgeLimitValue="false"
                                app:ibv_badgeTextColor="#ffffff"
                                app:ibv_badgeTextSize="12sp"
                                app:ibv_badgeTextStyle="bold"
                                app:ibv_badgeValue="0"
                                app:ibv_fixedBadgeRadius="15dp"
                                app:ibv_visibleBadge="false"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/livingroomtxt"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/livingroomtxt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/livingRoom"
                                android:textColor="#000000"
                                android:gravity="center"
                                android:textSize="18sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/livingroom"
                                app:layout_constraintTop_toTopOf="parent" />

                        </LinearLayout>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray"/>
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:clickable="true"
                            android:background="?attr/selectableItemBackground"
                            android:focusable="true"
                            android:orientation="horizontal">

                            <ru.nikartm.support.ImageBadgeView
                                android:id="@+id/garden"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_alignParentStart="true"
                                android:layout_gravity="center_vertical"
                                android:padding="10dp"
                                android:src="@drawable/ic_local_florist_black_24dp"
                                app:ibv_badgeColor="#FF5722"
                                app:ibv_badgeLimitValue="false"
                                app:ibv_badgeTextColor="#ffffff"
                                app:ibv_badgeTextSize="12sp"
                                app:ibv_badgeTextStyle="bold"
                                app:ibv_badgeValue="0"
                                app:ibv_fixedBadgeRadius="15dp"
                                app:ibv_visibleBadge="false"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/gardentxt"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/gardentxt"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="@string/garanso"
                                android:textColor="#000000"
                                android:textSize="18sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/garden"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
